# point2mesh-prune

./: .gitignore  README.md
point2mesh/: CMakeLists.txt  README.md  point2triangle_comparisons.py  triangle_mesh.py  vcglib_point2mesh.cpp
point2mesh/assets/: coarse_hinge_base.ply  fine_hinge_base.PLY
point2mesh/test/: script_run_32bit_gpu_gvd_random_query.py  script_test_gpu_bvh.py
point2mesh/util/: ArrayTricks.py  Math.py  binary_space_partition_tree.py  bounding_volume_hierarchy.py  fake_numba.py  priority_queue.py  triangle_geometry.py
point2mesh/voxelized/: closest.py  construction.py  distance.py  extended_linked_voxel_structure.py  visualization.py
